--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,7 @@
     "        self.deconv4 = nn.ConvTranspose2d(inchannels*2*64, inchannels*64, (2,2),2)\n",
     "        self.conv9 = ConvLayer(inchannels*2*64, 0.5)\n",
     "        self.conv10 = nn.Conv2d(inchannels*64, 2, (1,1), 1)\n",
+    "        self.activation = nn.Softmax(dim=1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x1 = self.conv1(x)\n",
@@ -79,38 +80,34 @@
     "        x3 = self.conv3(self.pool2(x2))\n",
     "        x4 = self.conv4(self.pool3(x3))\n",
     "        x5 = self.conv5(self.pool4(x4))\n",
-    "        print(x5.shape)\n",
     "        \n",
     "        x_up_1 = self.deconv1(x5)\n",
     "        x_up_1 = torch.concat((\n",
     "            transforms.CenterCrop(x_up_1.shape[2:3])(x4),\n",
-    "            x_up_1), axis=1)\n",
-    "        print(x_up_1.shape)\n",
+    "            x_up_1), dim=1)\n",
     "\n",
     "        x_up_2 = self.deconv2(self.conv6(x_up_1))\n",
     "        x_up_2 = torch.concat(\n",
     "            (transforms.CenterCrop(x_up_2.shape[2:3])(x3),\n",
     "            x_up_2), dim=1)\n",
-    "        print(x_up_2.shape)\n",
     "\n",
     "        x_up_3 = self.deconv3(self.conv7(x_up_2))\n",
     "        x_up_3 = torch.concat(\n",
     "            (transforms.CenterCrop(x_up_3.shape[2:3])(x2),\n",
     "            x_up_3), dim=1)\n",
-    "        print(x_up_3.shape)\n",
     "\n",
     "        x_up_4 = self.deconv4(self.conv8(x_up_3))\n",
     "        x_up_4 = torch.concat(\n",
     "            (transforms.CenterCrop(x_up_4.shape[2:3])(x1),\n",
     "            x_up_4), dim=1)\n",
-    "        print(x_up_4.shape)\n",
+    "\n",
     "        xout = self.conv10(self.conv9(x_up_4))\n",
-    "        return xout"
+    "        return self.activation(xout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +116,7 @@
        "torch.Size([1, 1, 1024, 1024])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,64 +130,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 1024, 56, 56])\n",
-      "torch.Size([1, 1024, 112, 112])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Given transposed=1, weight of size [512, 256, 2, 2], expected input[1, 1024, 112, 112] to have 512 channels, but got 1024 channels instead",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/w5/2v0w9g6936v76hvg244v5gxw0000gp/T/ipykernel_24254/4089748225.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_im\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/envs/unet_prax-env/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1128\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1131\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1132\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/w5/2v0w9g6936v76hvg244v5gxw0000gp/T/ipykernel_24254/65224941.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_up_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0mx_up_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeconv2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_up_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m         x_up_2 = torch.concat(\n\u001b[1;32m     62\u001b[0m             (transforms.CenterCrop(x_up_2.shape[2:3])(x3),\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/unet_prax-env/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1128\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1131\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1132\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/unet_prax-env/lib/python3.7/site-packages/torch/nn/modules/conv.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, output_size)\u001b[0m\n\u001b[1;32m    950\u001b[0m         return F.conv_transpose2d(\n\u001b[1;32m    951\u001b[0m             \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstride\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpadding\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 952\u001b[0;31m             output_padding, self.groups, self.dilation)\n\u001b[0m\u001b[1;32m    953\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    954\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Given transposed=1, weight of size [512, 256, 2, 2], expected input[1, 1024, 112, 112] to have 512 channels, but got 1024 channels instead"
+      "tensor([[[[0.5552, 0.5487, 0.5449,  ..., 0.6751, 0.7867, 0.7300],\n",
+      "          [0.5434, 0.5430, 0.5418,  ..., 0.6584, 0.7687, 0.7245],\n",
+      "          [0.5453, 0.5444, 0.5435,  ..., 0.6457, 0.7685, 0.7334],\n",
+      "          ...,\n",
+      "          [0.5757, 0.5836, 0.5907,  ..., 0.5812, 0.5736, 0.5644],\n",
+      "          [0.5772, 0.5797, 0.5787,  ..., 0.5666, 0.5710, 0.5733],\n",
+      "          [0.5752, 0.5729, 0.5644,  ..., 0.5520, 0.5613, 0.5705]],\n",
+      "\n",
+      "         [[0.4448, 0.4513, 0.4551,  ..., 0.3249, 0.2133, 0.2700],\n",
+      "          [0.4566, 0.4570, 0.4582,  ..., 0.3416, 0.2313, 0.2755],\n",
+      "          [0.4547, 0.4556, 0.4565,  ..., 0.3543, 0.2315, 0.2666],\n",
+      "          ...,\n",
+      "          [0.4243, 0.4164, 0.4093,  ..., 0.4188, 0.4264, 0.4356],\n",
+      "          [0.4228, 0.4203, 0.4213,  ..., 0.4334, 0.4290, 0.4267],\n",
+      "          [0.4248, 0.4271, 0.4356,  ..., 0.4480, 0.4387, 0.4295]]]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
      ]
     }
    ],
    "source": [
     "net = UNet(1)\n",
-    "out = net(test_im)"
+    "out = net(test_im)\n",
+    "out.shape\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Initialize network weights as follows : √2/N, where N denotes the number of incoming nodes of one neuron [5]. E.g. for a 3x3 convolution and 64 feature channels in the previous layerN= 9·64 = 576\n"
+    "###### Initialize network weights as follows :  \"For a network with our architecture (alternating convolution and ReLU layers) this can be achievedby  drawing  the  initial  weights  from  a  Gaussian  distribution  with  a  standard deviation of √2/N, where N denotes the number of incoming nodes of one neuron [5]. E.g. for a 3x3 convolution and 64 feature channels in the previous layer N= 9·64 = 576\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "only convolutional and deconvolutional layers have learnable parameters.\n",
+    "So, search for each convolutional\n",
+    "layer, to initialize, simply ask what the previous convolutional\n",
+    "layer's kernel size was,\n",
+    "and find the number of channels of that previous layer (dim[1])\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "MaxPool2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "MaxPool2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "MaxPool2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "MaxPool2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "ConvTranspose2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "ConvTranspose2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "ConvTranspose2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "ConvTranspose2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Conv2d\n",
+      "ReLU\n",
+      "Sequential\n",
+      "ConvLayer\n",
+      "Conv2d\n",
+      "Softmax\n",
+      "UNet\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "False"
+       "UNet(\n",
+       "  (conv1): ConvLayer(\n",
+       "    (_conv1): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (pool1): MaxPool2d(kernel_size=(2, 2), stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv2): ConvLayer(\n",
+       "    (_conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (pool2): MaxPool2d(kernel_size=(2, 2), stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv3): ConvLayer(\n",
+       "    (_conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (pool3): MaxPool2d(kernel_size=(2, 2), stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv4): ConvLayer(\n",
+       "    (_conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (pool4): MaxPool2d(kernel_size=(2, 2), stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv5): ConvLayer(\n",
+       "    (_conv1): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (deconv1): ConvTranspose2d(1024, 512, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (conv6): ConvLayer(\n",
+       "    (_conv1): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (deconv2): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (conv7): ConvLayer(\n",
+       "    (_conv1): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (deconv3): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (conv8): ConvLayer(\n",
+       "    (_conv1): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (deconv4): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (conv9): ConvLayer(\n",
+       "    (_conv1): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (_conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (net): Sequential(\n",
+       "      (0): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (1): ReLU()\n",
+       "      (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       "  (conv10): Conv2d(64, 2, kernel_size=(1, 1), stride=(1, 1))\n",
+       "  (activation): Softmax(dim=1)\n",
+       ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.cuda.is_available()"
+    "net.apply(lambda x: print(x.__class__.__name__))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 836, 836])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
