--- a/main.ipynb
+++ b/main.ipynb
@@ -132,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('unet_prax-env')",
+   "display_name": "Python ('unet_prax-env')",
    "language": "python",
    "name": "python3"
   },
@@ -146,12 +146,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": ""
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bba0aa6026272d72fa4312733ee44244b566d0cb10b9a208c00528c53cf61bbc"
+    "hash": "25a19fbe0a9132dfb9279d48d161753c6352f8f9478c2e74383d340069b907c3"
    }
   }
  },
